--- a/SERVER/.env
+++ b/SERVER/.env
@@ -1,7 +1,14 @@
-MAIL_HOST = 
-MAIL_USER =
-MAIL_PASS = 
-JWT_SECRET = 
+MAIL_HOST = smtp.gmail.com
+MAIL_USER = pratyakshagrawal2208@gmail.com
+MAIL_PASS = praty2208
+
+JWT_SECRET = "GJ"
 FOLDER_NAME="GJ"
-RAZORPAY_KEY=
-RAZORPAY_SECRET=
+
+RAZORPAY_KEY=rzp_test_XzlPqOzE4NHWUz
+RAZORPAY_SECRET=FWJui5VrEtS13WrXA7csgFzN
+CLOUD_NAME=dtr6whlsm
+API_KEY=493226864733758
+API_SECRET=GanChw28ZfYR8VNZCpybM5lckNk
+MONGODB_URL="mongodb+srv://pratyakshagrawal2208:spiKeskill@cluster0.nrbbngp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+PORT= 4000
