--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -12,13 +12,20 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.0.3",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "crypto-random-string": "^5.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "express-fileupload": "^1.4.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.11",
     "nodemon": "^3.1.0",
-    "otp-generator": "^4.0.1"
+    "otp-generator": "^4.0.1",
+    "razorpay": "^2.9.2"
   }
 }
