checking and updating

--- a/SERVER/.env
+++ b/SERVER/.env
@@ -1,7 +1,6 @@
-MAIL_HOST = smtp.gmail.com
-MAIL_USER = pratyakshagrawal2208@gmail.com
-MAIL_PASS = praty2208
-
+MAIL_HOST = 'smtp.gmail.com'
+MAIL_USER = 'pratyakshagrawal2208@gmail.com'
+MAIL_PASS = 'oseq mpzh dzqe vmcx'
 JWT_SECRET = "GJ"
 FOLDER_NAME="GJ"
 
