--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
     "concurrently": "^8.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -12,6 +13,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-type-animation": "^3.2.0",
+    "redux-toolkit": "^1.1.2",
     "web-vitals": "^2.1.4"
   },
   "repository": {
