--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.1",
     "react-type-animation": "^3.2.0",
     "redux-toolkit": "^1.1.2",
+    "swiper": "^11.0.7",
     "web-vitals": "^2.1.4"
   },
   "repository": {
