--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "concurrently": "^8.2.2",
+    "copy-to-clipboard": "^3.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-markdown": "^9.0.1",
     "react-otp-input": "^3.1.1",
     "react-progress-bar": "^0.1.0",
     "react-rating-stars-component": "^2.2.0",
