--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "@ramonak/react-progress-bar": "^5.2.0",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
+    "chart": "^0.1.2",
     "chip-input": "^0.3.2",
     "concurrently": "^8.2.2",
     "copy-to-clipboard": "^3.3.3",
+    "file-selector": "^0.6.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.0",
@@ -22,6 +25,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-super-responsive-table": "^5.2.2",
     "react-type-animation": "^3.2.0",
     "redux-toolkit": "^1.1.2",
     "swiper": "^11.0.7",
