--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@ramonak/react-progress-bar": "^5.2.0",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
     "chart": "^0.1.2",
     "chip-input": "^0.3.2",
     "concurrently": "^8.2.2",
